# android-logcat-for-linux

./: CMakeLists.txt  Makefile  log.pc.in
include/log/: log.h  logd.h  logger.h
kernel/: Makefile  logger.c  logger.h
kernel/kconfig/: Kconfig  Makefile
liblog/: event_tag_map.c  logd_write.c  logprint.c  test.c
logcat/: kmsg  logcat.cpp  logprint.c
logwrapper/: logwrapper.c
